--- a/noria-benchmarks/lobsters/Cargo.toml
+++ b/noria-benchmarks/lobsters/Cargo.toml
@@ -2,6 +2,7 @@
 name = "trawler-mysql"
 version = "0.1.0"
 authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
+edition = "2018"
 
 [features]
 orchestration = ["tsunami", "rusoto_core", "rusoto_sts", "failure"]
