--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ tower-direct-service = { git = "https://github.com/jonhoo/tower.git", branch = "
 tower-discover = { git = "https://github.com/jonhoo/tower.git", branch = "all"  }
 tower-balance = { git = "https://github.com/jonhoo/tower.git", branch = "all"  }
 tower-buffer = { git = "https://github.com/jonhoo/tower.git", branch = "all"  }
+tower-util = { git = "https://github.com/jonhoo/tower.git", branch = "all"  }
