--- a/noria-server/Cargo.toml
+++ b/noria-server/Cargo.toml
@@ -1,5 +1,3 @@
-cargo-features = ["rename-dependency"]
-
 [package]
 name = "noria-server"
 version = "0.1.0"
@@ -45,6 +43,8 @@ vec_map = { version = "0.8.0", features = ["eders"] }
 timer_heap = "0.3.0"
 serde = { version = "1.0.8", features = ["rc"] }
 zookeeper = "0.5.3"
+tokio-tower = { git = "https://github.com/tower-rs/tokio-tower-wip.git" }
+tower-util = "0.1"
 
 # local deps
 dataflow = { path = "dataflow" }
