--- a/noria/Cargo.toml
+++ b/noria/Cargo.toml
@@ -1,5 +1,3 @@
-cargo-features = ["edition"]
-
 [package]
 name = "noria"
 version = "0.1.2"
@@ -40,7 +38,7 @@ tower-service = "0.1"
 tower-balance = "0.1"
 tower-discover = "0.1"
 tower-buffer = "0.1"
-tokio-tower = { git = "https://github.com/tower-rs/tokio-tower-wip.git", branch = "direct_service" }
+tokio-tower = { git = "https://github.com/tower-rs/tokio-tower-wip.git" }
 slab = "0.4"
 
 # consensus/
