--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -17,7 +17,7 @@ nom-sql = { git = "https://github.com/ms705/nom-sql.git", rev = "791c0f5117b6e02
 regex = "1.0.0"
 itertools = "0.7.2"
 slog = "2.2.2"
-#slog = { version = "2.2.2", features = ["max_level_trace", "release_max_level_debug"] }
+# slog = { version = "2.2.2", features = ["max_level_trace", "release_max_level_trace"] }
 slog-term = "2.4.0"
 vec_map = { version = "0.8.0" }
 rayon = "1.0"
