--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ members = [
 debug=true
 
 [patch.crates-io]
-tower-service = { git = "https://github.com/jonhoo/tower.git", branch = "all" }
-tower-direct-service = { git = "https://github.com/jonhoo/tower.git", branch = "all" }
-tower-discover = { git = "https://github.com/jonhoo/tower.git", branch = "all"  }
-tower-balance = { git = "https://github.com/jonhoo/tower.git", branch = "all"  }
-tower-buffer = { git = "https://github.com/jonhoo/tower.git", branch = "all"  }
-tower-util = { git = "https://github.com/jonhoo/tower.git", branch = "all"  }
+tower-service = { git = "https://github.com/jonhoo/tower.git", branch = "dynamic-balance" }
+tower-direct-service = { git = "https://github.com/jonhoo/tower.git", branch = "dynamic-balance" }
+tower-discover = { git = "https://github.com/jonhoo/tower.git", branch = "dynamic-balance"  }
+tower-balance = { git = "https://github.com/jonhoo/tower.git", branch = "dynamic-balance"  }
+tower-buffer = { git = "https://github.com/jonhoo/tower.git", branch = "dynamic-balance"  }
+tower-util = { git = "https://github.com/jonhoo/tower.git", branch = "dynamic-balance"  }
