--- a/noria-server/dataflow/Cargo.toml
+++ b/noria-server/dataflow/Cargo.toml
@@ -1,3 +1,4 @@
+
 [package]
 name = "dataflow"
 version = "0.1.0"
@@ -22,6 +23,7 @@ tokio = "0.1"
 vec_map = { version = "0.8.0", features = ["eders"] }
 hyper = "0.12.0"
 tempfile = "3.0.2"
+randomkit = "0.1"
 
 # need features
 backtrace = { version = "0.3.2", features = ["serialize-serde"] }
