--- a/noria-benchmarks/Cargo.toml
+++ b/noria-benchmarks/Cargo.toml
@@ -107,9 +107,9 @@ path = "vote-dbtoaster-style/main.rs"
 name = "replay"
 path = "replay/main.rs"
 
-#[[bin]]
-#name = "security-mysql"
-#path = "piazza/mysql.rs"
+[[bin]]
+name = "security-mysql"
+path = "piazza/mysql.rs"
 
 [[bin]]
 name = "securelobsters"
