--- a/noria-server/Cargo.toml
+++ b/noria-server/Cargo.toml
@@ -28,6 +28,7 @@ serde_derive = "1.0.8"
 serde_json = "1.0.2"
 slog = "2.4.0"
 # slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_trace"] }
+srmap = { path = "/Users/alanamarzoev/Desktop/multidb/srmap"}
 slog-term = "2.4.0"
 slab = "0.4"
 bincode = "1.0.0"
