catch up to where everything was before, minus write policies

--- a/noria-benchmarks/Cargo.toml
+++ b/noria-benchmarks/Cargo.toml
@@ -114,3 +114,11 @@ path = "piazza/mysql.rs"
 [[bin]]
 name = "securelobsters"
 path = "securelobsters/main.rs"
+
+[[bin]]
+name = "piazza-write"
+path = "piazza/piazza-write.rs"
+
+[[bin]]
+name = "mysql-write"
+path = "piazza/mysql-write.rs"
