--- a/noria-benchmarks/Cargo.toml
+++ b/noria-benchmarks/Cargo.toml
@@ -110,3 +110,7 @@ path = "replay/main.rs"
 [[bin]]
 name = "security-mysql"
 path = "piazza/mysql.rs"
+
+[[bin]]
+name = "piazza-write"
+path = "piazza/piazza-write.rs"
