--- a/noria-server/dataflow/Cargo.toml
+++ b/noria-server/dataflow/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 [dependencies]
 bincode = "1.0.0"
 evmap = { git = "https://github.com/jonhoo/rust-evmap", branch = "eviction" }
-srmap = { git = "https://github.com/amarzoev/srmap" }
+srmap = { git = "https://github.com/jonhoo/srmap", branch = "less-mut" }
 fnv = "1.0.5"
 futures = "0.1"
 itertools = "0.7.2"
