--- a/taster.toml
+++ b/taster.toml
@@ -18,6 +18,12 @@ args = ["run", "--release", "--manifest-path", "noria-benchmarks/Cargo.toml", "-
 regexs = ["^(replay\t50)\t([0-9.]+)", "^(replay\t95)\t([0-9.]+)"]
 lower_better = true
 
+[piazza]
+command = "cargo"
+args = ["run", "--release", "--manifest-path", "noria-benchmarks/Cargo.toml", "--bin", "piazza", "--", "-m", "shallow-readers", "-u", "1000"]
+regexs = ["^(login\tcold\t50)\t([0-9.]+)", "^(pcount\tcold\t50)\t([0-9.]+)", "^(pcount\twarm\t50)\t([0-9.]+)", "^(post\tcold\t50)\t([0-9.]+)"]
+lower_better = true
+
 #[staged]
 #command = "cargo"
 #args = ["run", "--release", "--manifest-path", "benchmarks/Cargo.toml", "--bin", "vote", "--", "--avg", "--articles=100000", "--stage", "--runtime=30"]
