--- a/noria-benchmarks/Cargo.toml
+++ b/noria-benchmarks/Cargo.toml
@@ -53,6 +53,9 @@ ctrlc = "3.1"
 failure = "0.1"
 tower-service = "0.2"
 tokio-mock-task = "0.1"
+reqwest = "0.9"
+serde_json = "1.0"
+url = "1.7"
 
 [[bin]]
 name = "vote"
