Add early draft of albums test

--- a/noria-benchmarks/Cargo.toml
+++ b/noria-benchmarks/Cargo.toml
@@ -119,3 +119,7 @@ path = "replay/main.rs"
 [[bin]]
 name = "piazza-mysql"
 path = "piazza/mysql.rs"
+
+[[bin]]
+name = "albums"
+path = "albums/main.rs"
