--- a/noria-server/Cargo.toml
+++ b/noria-server/Cargo.toml
@@ -30,6 +30,7 @@ slog = "2.4.0"
 #slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_trace"] }
 slog-term = "2.4.0"
 tokio-os-timer = "0.1.2"
+indexmap = "1.0"
 slab = "0.4"
 bincode = "1.0.0"
 tokio = "0.1"
