--- a/noria-benchmarks/Cargo.toml
+++ b/noria-benchmarks/Cargo.toml
@@ -59,6 +59,10 @@ name = "vote"
 path = "vote/main.rs"
 
 [[bin]]
+name = "vote-write-prop"
+path = "vote-write-prop/main.rs"
+
+[[bin]]
 name = "vote-distributed"
 path = "vote/distributed.rs"
 required-features = ["orchestration"]
