--- a/noria-benchmarks/Cargo.toml
+++ b/noria-benchmarks/Cargo.toml
@@ -31,6 +31,8 @@ rand = "0.5.0"
 zipf = "4.0.0"
 # sampling
 hdrhistogram = "6.1"
+# static vecs
+lazy_static = "1.3.0"
 # mssql
 futures-state-stream = "0.1"
 tiberius = "0.3.1"
