--- a/noria-server/dataflow/Cargo.toml
+++ b/noria-server/dataflow/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 [dependencies]
 bincode = "1.0.0"
 evmap = { git = "https://github.com/jonhoo/rust-evmap", branch = "eviction" }
+hdrhistogram = "6.1"
 fnv = "1.0.5"
 futures = "0.1"
 itertools = "0.7.2"
