Debug level logging

--- a/noria/Cargo.toml
+++ b/noria/Cargo.toml
@@ -46,7 +46,7 @@ slab = "0.4"
 
 # consensus/
 #slog = "2.4.0"
-slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_trace"] }
+slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_debug"] }
 slog-term = "2.4.0"
 zookeeper = "0.5.3"
 
