--- a/noria-benchmarks/Cargo.toml
+++ b/noria-benchmarks/Cargo.toml
@@ -14,8 +14,8 @@ noria = { path = "../noria-server", package = "noria-server" }
 nom-sql = "0.0.9"
 regex = "1.0.0"
 itertools = "0.8"
-slog = "2.4.0"
-#slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_trace"] }
+#slog = "2.4.0"
+slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_trace"] }
 slog-term = "2.4.0"
 vec_map = { version = "0.8.0" }
 rayon = "1.0"
