--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ members = [
 
 [profile.release]
 debug=true
+debug-assertions = true
 
 [patch.crates-io]
 tokio-tower = { git = "https://github.com/tower-rs/tokio-tower.git", branch = "no-box" }
+tokio = { path = "/home/jfrg/tokio-priv/tokio" }
