--- a/noria-benchmarks/Cargo.toml
+++ b/noria-benchmarks/Cargo.toml
@@ -47,6 +47,10 @@ mio = "0.6.9"
 #futures = "0.1.14"
 #futures-cpupool = "0.1.8"
 tokio = { version = "0.2.0", features = ["full"] }
+tracing = "*"
+tracing-subscriber = {version = "0.2.0-alpha.2", git = "https://github.com/tokio-rs/tracing", branch = "eliza/pub-ctor", features = ["registry", "fmt"]}
+tracing-futures = "*"
+tokio-trace = { path = "/home/jfrg/tokio-priv/tokio-trace" }
 tokio-test = "0.2.0"
 # ec2
 rusoto_core = { optional = true, version = "0.40" }
