--- a/noria-benchmarks/Cargo.toml
+++ b/noria-benchmarks/Cargo.toml
@@ -46,7 +46,7 @@ mio = "0.6.9"
 # futures
 #futures = "0.1.14"
 #futures-cpupool = "0.1.8"
-tokio = { version = "0.2.0", features = ["full"] }
+tokio = { version = "0.2.0", features = ["full", "tracing"] }
 tracing = "*"
 tracing-subscriber = {version = "0.2.0-alpha.2", git = "https://github.com/tokio-rs/tracing", branch = "eliza/pub-ctor", features = ["registry", "fmt"]}
 tracing-futures = "*"
