--- a/noria-server/Cargo.toml
+++ b/noria-server/Cargo.toml
@@ -38,7 +38,7 @@ bincode = "1.0.0"
 tokio = { version = "0.2.0", features = ["full"] }
 async-bincode = "0.5.0"
 tracing = "0.1"
-tracing-subscriber = "0.1.0"
+tracing-subscriber = {version = "0.2.0-alpha.2", git = "https://github.com/tokio-rs/tracing", branch = "eliza/pub-ctor", features = ["registry", "fmt"]}
 streamunordered = "0.5.0"
 stream-cancel = "0.5.1"
 
@@ -47,7 +47,7 @@ vec_map = { version = "0.8.0", features = ["eders"] }
 timer_heap = "0.3.0"
 serde = { version = "1.0.8", features = ["rc"] }
 zookeeper = "0.5.3"
-tokio-tower = "0.3.0"
+tokio-tower = { version = "0.3.0", default-features = false }
 tower-util = "0.3.0"
 tower = "0.3.0"
 
