--- a/applications/Cargo.toml
+++ b/applications/Cargo.toml
@@ -8,9 +8,10 @@ publish = false
 [dependencies]
 chrono = { version = "0.4.0", features = ["serde"] }
 clap = "2.25.0"
+csv = "1.1.3"
 failure = "0.1"
-futures-core = "0.3.0"
-futures-util = "0.3.0"
+futures-core = "0.3.4"
+futures-util = "0.3.4"
 hdrhistogram = "7"
 itertools = "0.9"
 memcached-rs = "0.4.2"
@@ -30,6 +31,9 @@ trawler = "=0.9.0-beta.3"
 vec_map = { version = "0.8.0" }
 zipf = "6"
 zookeeper = "0.5.3"
+reqwest = "0.9"
+serde_json = "1.0"
+url = "1.7"
 
 # mssql
 # disabled due to lack of async/await support
@@ -87,3 +91,7 @@ path = "lobsters/mysql/main.rs"
 #[[bin]]
 #name = "security-mysql"
 #path = "piazza/mysql.rs"
+
+[[bin]]
+name = "manual"
+path = "manual/main.rs"
