--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ tokio-tower = { git = "https://github.com/tower-rs/tokio-tower.git", branch = "n
 # https://github.com/tokio-rs/tokio/pull/2160
 # optional -- just saves us from busy future loops
 tokio = { git = "https://github.com/tokio-rs/tokio.git", branch="more-block-in-place" }
+tsunami = { git = "https://github.com/jonhoo/tsunami.git", branch = "openssh" }
