--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,8 @@ tokio-tower = { git = "https://github.com/tower-rs/tokio-tower.git", branch = "n
 # https://github.com/tokio-rs/tokio/pull/2160
 # optional -- just saves us from busy future loops
 tokio = { git = "https://github.com/tokio-rs/tokio.git", branch="more-block-in-place" }
-tsunami = { git = "https://github.com/jonhoo/tsunami.git", branch = "openssh" }
+# tsunami = { git = "https://github.com/jonhoo/tsunami.git", branch = "openssh" }
+# tsunami = { git = "https://github.com/akshayknarayan/tsunami.git", branch = "new-machine-lifetimes" }
+tsunami = { git = "https://github.com/akshayknarayan/tsunami.git", branch = "openssh" }
+# tsunami = { path = "/home/jon/dev/minor/tsunami" }
+# openssh = { path = "/home/jon/dev/minor/openssh" }
