--- a/orchestration/Cargo.toml
+++ b/orchestration/Cargo.toml
@@ -25,7 +25,7 @@ openssh = "0.4"
 timeout-readwrite = "0.3"
 tokio = { version = "0.2.0", features = ["full"] }
 tower-service = "0.3.0"
-tsunami = "=0.11.0-beta.3"
+tsunami = { version = "=0.11.0-beta.3", default-features = false, features = ["aws"] }
 vec_map = { version = "0.8.0" }
 yansi = "0.5"
 
