Purge pages in background threads
This is critical so that progress on write processing can continue,
which in turn is needed to allow the executor to keep running in a
timely fashion.

--- a/server/dataflow/Cargo.toml
+++ b/server/dataflow/Cargo.toml
@@ -15,7 +15,7 @@ keywords = ["internal"]
 maintenance = { status = "experimental" }
 
 [target.'cfg(not(target_env="msvc"))'.dependencies]
-jemallocator = "0.3"
+jemallocator = { version = "0.3", features = ["background_threads"] }
 
 [dependencies]
 bincode = "1.0.0"
