No more indexmap patch

--- a/server/dataflow/Cargo.toml
+++ b/server/dataflow/Cargo.toml
@@ -25,7 +25,7 @@ ahash = "0.3"
 futures-util = "0.3.0"
 itertools = "0.9"
 nom-sql = "0.0.11"
-indexmap = "1.1.0"
+indexmap-amortized = "1"
 rand = "0.7"
 regex = "1"
 serde_derive = "1.0.8"
