chore: update CI piplines and docs

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ jobs:
    steps:
      - template: install-rust.yml@templates
        parameters:
-         rust: nightly
+         rust: stable
          components:
            - rustfmt
      - bash: |
